# kookykangaroo

./: .env.example  README.md  README.org  pyproject.toml
src/kookykangaroo/: __init__.py  cli.py  credentials.py  logger.py  markdown_parser.py  neo4j_graph.py  traversal.py
tests/: test_markdown_parser.py  test_neo4j_graph.py  test_traversal.py
tests/data/: sample.md
